Kubernetes/apps/mcpjungle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcpjungle
  namespace: utilities
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: mcpjungle
