Kubernetes/apps/mcpjungle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcpjungle
  namespace: utilities
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mcp.nerine.dev`)
      kind: Rule
      services:
        - name: mcpjungle
          port: 8080
      middlewares:
        - name: private-chain
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
